ajax.js initial ajax request function ready, needs to test

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 </head>
 <body>
 
+
+
+
+	<script scr='assets/javascript/ajax.js'></script>
+	<script scr='assets/javascript/app.js'></script>
 </body>
 </html>
