--- a/index.html
+++ b/index.html
@@ -8,9 +8,32 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script type="text/javascript" src="assets/javascript/app.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
 </head>
 <body>
+
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+		<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-film"></span>  Movie Buff Hub!</a>
+			<ul class="nav nav-tabs navbar-right">
+			  <li role="presentation" class="active"><a href="#">Home</a></li>
+			  <li role="presentation"><a href="#">History</a></li>
+			  <li role="presentation"><a href="#">About Us</a></li>
+			</ul>
+		</div>
+	</nav>
+
+	<div class="container">
+	
+		<div class="panel panel-default">
+		<div class="panel-heading">Search: </div>
+			<div class="panel-body">
+			<input type="text" class="form-control" placeholder="ex. The Green Mile">
+			<br>
+			<button type="submit" class="btn btn-default">Submit</button>
+			</div>
+
+		</div>
+	</div>
 
 </body>
 </html>
