added script links to bottom of index.html

--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
 		</div>
 	</div>
 
+	<script src="assets/javascript/ajax.js"></script>
+	<script src="assets/javascript/app.js"></script>
+
 </body>
 </html>
