--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 		<div class="panel panel-default">
 		<div class="panel-heading">Search: </div>
 			<div class="panel-body">
-			<input type="text" class="form-control" placeholder="ex. The Green Mile">
+			<input type="text" class="form-control" placeholder="ex. The Green Mile" id="main-search">
 			<br>
-			<button type="submit" class="btn btn-default">Submit</button>
+			<button type="submit" class="btn btn-default" id="search-submit">Submit</button>
 			</div>
 
 		</div>
