fixed meta data (title) of .html files and changed class=active for navbar tabs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Movie Buff Hub - History</title>
+	<title>Movie Buff Hub</title>
 	<!-- Link to jQuery for .js Files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 	<!-- Link to Bootstrap & Custom Style Sheets-->
@@ -29,8 +29,8 @@
 			<!-- Wrap in collapse navbar div for mobile responsiveness -->
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav nav-tabs navbar-right">
-				  <li role="presentation"><a href="#">Home</a></li>
-				  <li role="presentation" class="active"><a href="#">History</a></li>
+				  <li role="presentation" class="active"><a href="#">Home</a></li>
+				  <li role="presentation"><a href="#">History</a></li>
 				  <li role="presentation"><a href="#">About Us</a></li>
 				</ul>
 			</div> <!-- end of navbar-collapse -->
