set href destinations for navbar tabs and brand

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 	<!-- Top-Floating Nav Bar -->
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-film"></span>  Movie Buff Hub!</a>
+			<a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-film"></span>  Movie Buff Hub!</a>
 			<!-- collapse bars for when viewport is too small -->
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -29,8 +29,8 @@
 			<!-- Wrap in collapse navbar div for mobile responsiveness -->
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav nav-tabs navbar-right">
-				  <li role="presentation"><a href="#">Home</a></li>
-				  <li role="presentation"><a href="#">History</a></li>
+				  <li role="presentation"><a href="index.html">Home</a></li>
+				  <li role="presentation"><a href="history.html">History</a></li>
 				  <li role="presentation" class="active"><a href="#">About Us</a></li>
 				</ul>
 			</div> <!-- end of navbar-collapse -->
