--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Movie Buff Hub</title>
+	<title>Movie Buff Hub - Home</title>
 	<!-- Link to jQuery for .js Files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 	<!-- Link to Bootstrap & Custom Style Sheets-->
@@ -30,8 +30,8 @@
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav nav-tabs navbar-right">
 				  <li role="presentation" class="active"><a href="#">Home</a></li>
-				  <li role="presentation"><a href="#">History</a></li>
-				  <li role="presentation"><a href="#">About Us</a></li>
+				  <li role="presentation"><a href="history.html">History</a></li>
+				  <li role="presentation"><a href="about.html">About Us</a></li>
 				</ul>
 			</div> <!-- end of navbar-collapse -->
 		</div> <!-- end of navbar container -->
