changed about.html and history.html to inverse navbar

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<!-- Top-Floating Nav Bar -->
-	<nav class="navbar navbar-default navbar-fixed-top">
+	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="container">
 			<a class="navbar-brand" href="index.html"><span class="glyphicon glyphicon-film"></span>  Movie Buff Hub!</a>
 			<!-- collapse bars for when viewport is too small -->
@@ -28,7 +28,7 @@
 			</div>
 			<!-- Wrap in collapse navbar div for mobile responsiveness -->
 			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav nav-tabs navbar-right">
+				<ul class="nav navbar-nav navbar-right">
 				  <li role="presentation"><a href="index.html">Home</a></li>
 				  <li role="presentation"><a href="history.html">History</a></li>
 				  <li role="presentation" class="active"><a href="#">About Us</a></li>
