--- a/history.html
+++ b/history.html
@@ -12,6 +12,7 @@
 	<!-- Added the below script references to get the navbar collapse to work -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  	<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
 </head>
 <body>
 	<!-- Top-Floating Nav Bar -->
@@ -50,6 +51,7 @@
 	</div> <!-- end of main content container -->
 
 	<!-- Links to our project's .js files -->
+	<script src="assets/javascript/database-mng.js"></script>
 	<script src="assets/javascript/ajax.js"></script>
 	<script src="assets/javascript/app.js"></script>
 
