added event listener to reading allsearches directory in firebase and appending to history.html

--- a/history.html
+++ b/history.html
@@ -41,11 +41,11 @@
 	<!-- Main Content Container -->
 	<div class="container">	
 		<div class="panel panel-default">
-			<div class="panel-heading">Search: </div>
+			<div class="panel-heading">Other Users Have Recently Viewed: </div>
 			<div class="panel-body">
-				<input type="text" class="form-control" placeholder="ex. The Green Mile" id="main-search">
-				<br>
-				<button type="submit" class="btn btn-default" id="search-submit">Submit</button>
+				<div id="all-searches">
+					
+				</div>
 			</div> <!-- end of panel body -->
 		</div> <!-- end of panel default -->
 	</div> <!-- end of main content container -->
