--- a/index.html
+++ b/index.html
@@ -44,9 +44,16 @@
 		<div class="panel panel-default">
 			<div class="panel-heading">Search: </div>
 			<div class="panel-body">
+				<label for="main-search">Movie Title</label>
 				<input type="text" class="form-control" placeholder="ex. The Green Mile" id="main-search">
 				<br>
 				<button type="submit" class="btn btn-default" id="search-submit">Submit</button>
+				<br>
+				<br>
+				<label for="person-search">Actor/Actress Name</label>
+				<input type="text" class="form-control" placeholder="ex. Chris Pratt" id="person-search">
+				<br>
+				<button type="submit" class="btn btn-default" id="person-submit">Submit</button>
 			</div> <!-- end of panel body -->
 		</div> <!-- end of panel default -->
 	</div> <!-- end of main content container -->
