added methods.js with functions for writing to firebase directories allsearches and usersearches

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 	<!-- Links to our project's .js files -->
 	<script src="assets/javascript/database-mng.js"></script>
+	<script src="assets/javascript/methods.js"></script>
 	<script src="assets/javascript/ajax.js"></script>
 	<script src="assets/javascript/app.js"></script>
 
