--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
 				<button type="submit" class="btn btn-default" id="person-submit">Submit</button>
 			</div> <!-- end of panel body -->
 		</div> <!-- end of panel default -->
+		<div class="row">
+			<h4 class="text-center">Other Users Have Viewed</h4>
+			<div id="suggestions-onindex"></div>
+		</div>
 	</div> <!-- end of main content container -->
+	
 
 	<!-- Links to our project's .js files -->
 	<script src="assets/javascript/database-mng.js"></script>
