fixed issue where search results and other query data were not being written to firebase at the same time, thus causing errors in real-time updating. changed ajax requests and some methods so that all search data is lumped together and sent after ajax is complete.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			</div> <!-- end of panel body -->
 		</div> <!-- end of panel default -->
 		<div class="row">
-			<h4 class="text-center">Other Users Have Viewed</h4>
+			<h4 class="text-center">Other Users Have Recently Viewed...</h4>
 			<div id="suggestions-onindex"></div>
 		</div>
 	</div> <!-- end of main content container -->
