--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<!-- Main Content Container -->
 	<div class="container">	
 		<div class="row">
-			<div class="col s12 m9">
+			<div class="col s12 l9">
 				<div class="card-panel hoverable">
 					<div class="card-image">
 						<img src="assets/images/film1.jpg" alt="film1.jpg" class="responsive-img">
@@ -55,7 +55,7 @@
 		</div> <!-- end of row -->
 
 		<div class="row">
-			<div class="col s12 m9">
+			<div class="col s12 l9">
 				<div class="card-panel hoverable">
 					<div class="card-content">
 						<span class="card-title">Search by Person</span>
@@ -70,9 +70,11 @@
 		</div> <!-- end of row -->
 			
 		<div class="row">
-			<div class="col s12">
-				<h4 class="text-center">Other Users Have Recently Viewed...</h4>
-				<div id="suggestions-onindex"></div>
+			<div class="col s12 l9">
+				<h4>Other Users Have Recently Viewed...</h4>
+				<!-- <div id="suggestions-onindex"> -->
+				<div class="carousel"></div>
+				<!-- </div> -->
 			</div> <!-- end of col -->				
 		</div> <!-- end of row -->
 
