Added Modals to movie submit and actor submit

--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
 
 	</div> <!-- end of main content container -->
 
+	<!-- Modal for movies -->
+
+	<div id="my-modal-movie" class="modal">
+    	<div class="modal-content">
+      		<h4>Try again!</h4>
+      		<p>Sorry that's not a movie...</p>
+      	</div>
+    </div>
+
+    <!-- Modal for actors -->
+
+    <div id="my-modal-actor" class="modal">
+    	<div class="modal-content">
+      		<h4>Try Again!</h4>
+      		<p>Sorry that's not a real actor...</p>
+      	</div>
+    </div>
+
 	<!-- ***** Links to external js files ***** -->
 	<!-- Link to jQuery first-->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
