must be some empty space that i changed, nothing to commit

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 			</div> <!-- end of col -->				
 		</div> <!-- end of row -->
 
+		<!-- Empty modal div -->
+		<div id="mymodal-div"></div>
+
 	</div> <!-- end of main content container -->
 
 	<!-- ***** Links to external js files ***** -->
