--- a/index.html
+++ b/index.html
@@ -4,66 +4,83 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Movie Buff Hub - Home</title>
+	<!-- Compiled and minified CSS -->
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+  	<!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!-- Link to jQuery for .js Files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 	<!-- Link to Bootstrap & Custom Style Sheets-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+	
 	<!-- Added the below script references to get the navbar collapse to work -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script> -->
+	  <!-- Compiled and minified JavaScript -->
+  	
+  	<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
   	<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
 
 </head>
 <body>
 	<!-- Top-Floating Nav Bar -->
-	<nav class="navbar navbar-inverse navbar-fixed-top">
-		<div class="container">
-			<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-film"></span>  Movie Buff Hub!</a>
+	<nav>
+		<div class="nav-wrapper deep-orange darken-4">
+			<a class="brand-logo" href="index.html"><i class="material-icons">movie</i>  Movie Buff Hub!</a>
 			<!-- collapse bars for when viewport is too small -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-			        <span class="icon-bar"></span>
-				</button>
-			</div>
-			<!-- Wrap in collapse navbar div for mobile responsiveness -->
-			<div class="collapse navbar-collapse" id="myNavbar">
-				<ul class="nav navbar-nav navbar-right">
-				  <li role="presentation" class="active"><a href="#">Home</a></li>
-				  <li role="presentation"><a href="history.html">History</a></li>
-				  <li role="presentation"><a href="about.html">About Us</a></li>
-				</ul>
-			</div> <!-- end of navbar-collapse -->
+			<a href="#" data-activates="sidebar" class="button-collapse"><i class="material-icons">menu</i></a>
+			<ul class="right hide-on-med-and-down">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="history.html">History</a></li>
+				<li><a href="about.html">About Us</a></li>
+			</ul>
+			<ul class="side-nav" id="sidebar">
+				<li><a href="index.html">Home</a></li>
+				<li><a href="history.html">History</a></li>
+				<li><a href="about.html">About Us</a></li>
+			</ul>
 		</div> <!-- end of navbar container -->
 	</nav> <!-- end of nav -->
 
 	<!-- Main Content Container -->
-	<div class="container">	
-		<div class="panel panel-default">
-			<div class="panel-heading">Search: </div>
-			<div class="panel-body">
-				<label for="main-search">Movie Title</label>
-				<input type="text" class="form-control" placeholder="ex. The Green Mile" id="main-search">
-				<br>
-				<button type="submit" class="btn btn-default" id="search-submit">Submit</button>
-				<br>
-				<br>
-				<label for="person-search">Actor/Actress Name</label>
-				<input type="text" class="form-control" placeholder="ex. Chris Pratt" id="person-search">
-				<br>
-				<button type="submit" class="btn btn-default" id="person-submit">Submit</button>
-			</div> <!-- end of panel body -->
-		</div> <!-- end of panel default -->
+<!-- 	<div class="container"> -->
+		<div class="row">	
+			<form class="col s12">
+				<div class="card blue-grey darken-4">
+					<div class="row">
+						<div class="card-content white-text">
+							<span class="card-title">Search: </span>
+							<div class="input-field col s6">
+								<label for="main-search">Movie Title</label>
+								<input type="text" class="validate" placeholder="ex. The Green Mile" id="main-search">
+								<br>
+								<button type="submit" class="btn waves-effect waves-red" id="search-submit"><i class="material-icons right">send</i>Submit</button>
+							</div>
+							<div class="input-field col s6">
+								<label for="person-search">Actor/Actress Name</label>
+								<input type="text" class="validate" placeholder="ex. Chris Pratt" id="person-search">
+								<br>
+								<button type="submit" class="btn waves-effect waves-red" id="person-submit"><i class="material-icons right">send</i>Submit</button>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</form> <!-- end of panel default -->		
+		</div>
+	<!-- </div> end of main content container -->
+		<div class="slider left" style="max-width: 800px; margin: 0 10px">
+			<ul class="slides" id="backgrounds">
+		  	</ul>
+		</div>
 		<div class="row">
 			<h4 class="text-center">Other Users Have Viewed</h4>
 			<div id="suggestions-onindex"></div>
 		</div>
-	</div> <!-- end of main content container -->
-	
+
 
 	<!-- Links to our project's .js files -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 	<script src="assets/javascript/database-mng.js"></script>
 	<script src="assets/javascript/methods.js"></script>
 	<script src="assets/javascript/ajax.js"></script>
