added container to index

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
 	<!-- Main Content Container -->
 <!-- 	<div class="container"> -->
+	<div class="container">
 		<div class="row">	
 			<form class="col s12">
 				<div class="card blue-grey darken-4">
@@ -69,15 +70,16 @@
 			</form> <!-- end of panel default -->		
 		</div>
 	<!-- </div> end of main content container -->
-		<div class="slider left" style="max-width: 800px; margin: 0 10px">
+		<div class="slider left" style="max-width: 800px;">
 			<ul class="slides" id="backgrounds">
 		  	</ul>
 		</div>
+
 		<div class="row">
 			<h4 class="text-center">Other Users Have Recently Viewed...</h4>
 			<div id="suggestions-onindex"></div>
 		</div>
-
+	</div>
 
 	<!-- Links to our project's .js files -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
