--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Compiled and minified CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
   	<!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!-- Link to jQuery for .js Files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
@@ -43,7 +43,7 @@
 	</nav> <!-- end of nav -->
 
 	<!-- Main Content Container -->
-<!-- 	<div class="container"> -->
+	<div class="container">
 		<div class="row">	
 			<form class="col s12">
 				<div class="card blue-grey darken-4">
@@ -68,15 +68,22 @@
 				</div>
 			</form> <!-- end of panel default -->		
 		</div>
-	<!-- </div> end of main content container -->
-		<div class="slider left" style="max-width: 800px; margin: 0 10px">
-			<ul class="slides" id="backgrounds">
-		  	</ul>
-		</div>
 		<div class="row">
-			<h4 class="text-center">Other Users Have Viewed</h4>
-			<div id="suggestions-onindex"></div>
+			<div class="col s9">
+				<h4>Popular Movies Today...</h4>
+				<div class="slider" style="max-width: 800px;">
+					<ul class="slides" id="backgrounds">
+				  	</ul>
+				</div>
+			</div>
+			<div class="col s3">
+				<div class="row">
+					<h4 class="text-center">Other Users Have Viewed</h4>
+					<div id="suggestions-onindex"></div>
+				</div>
+			</div>
 		</div>
+	</div> <!-- end of main content container -->
 
 
 	<!-- Links to our project's .js files -->
