--- a/index.html
+++ b/index.html
@@ -45,28 +45,32 @@
 	<!-- Main Content Container -->
 	<div class="container">
 		<div class="row">	
-			<form class="col s12">
+			<div class="col s12">
 				<div class="card blue-grey darken-4">
 					<div class="row">
 						<div class="card-content white-text">
 							<span class="card-title">Search: </span>
-							<div class="input-field col s6">
-								<label for="main-search">Movie Title</label>
-								<input type="text" class="validate" placeholder="ex. The Green Mile" id="main-search">
-								<br>
-								<button type="submit" class="btn waves-effect waves-red" id="search-submit"><i class="material-icons right">send</i>Submit</button>
-							</div>
-							<div class="input-field col s6">
-								<label for="person-search">Actor/Actress Name</label>
-								<input type="text" class="validate" placeholder="ex. Chris Pratt" id="person-search">
-								<br>
-								<button type="submit" class="btn waves-effect waves-red" id="person-submit"><i class="material-icons right">send</i>Submit</button>
-							</div>
+							<form>
+								<div class="input-field col s6">
+									<label for="main-search">Movie Title</label>
+									<input type="text" class="validate" placeholder="ex. The Green Mile" id="main-search">
+									<br>
+									<button type="submit" class="btn waves-effect waves-red" id="search-submit"><i class="material-icons right">send</i>Submit</button>
+								</div>
+							</form>
+							<form>
+								<div class="input-field col s6">
+									<label for="person-search">Actor/Actress Name</label>
+									<input type="text" class="validate" placeholder="ex. Chris Pratt" id="person-search">
+									<br>
+									<button type="submit" class="btn waves-effect waves-red" id="person-submit"><i class="material-icons right">send</i>Submit</button>
+								</div>
+							</form>
 
 						</div>
 					</div>
 				</div>
-			</form> <!-- end of panel default -->		
+			</div> <!-- end of panel default -->		
 		</div>
 		<div class="row">
 			<div class="col s9">
