--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- Compiled and minified CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
   	<!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!-- Link to jQuery for .js Files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
