--- a/index.html
+++ b/index.html
@@ -34,32 +34,33 @@
 
 	<!-- Main Content Container -->
 	<div class="container">
-		<div class="row">	
-			<form class="col s12">
-				<div class="card blue-grey darken-4">
-					<div class="row">
-						<div class="card-content white-text">
-							<span class="card-title">Search: </span>
-							<div class="input-field col s6">
+		<div class="row">
+			<div class="card blue-grey darken-4">
+				<div class="row">
+					<div class="card-content white-text">
+						<span class="card-title">Search: </span>
+						<div class="input-field col s6">
+							<form id="movie-form" action="">
 								<label for="main-search">Movie Title</label>
 								<input type="text" class="validate" placeholder="ex. The Green Mile" id="main-search">
 								<br>
 								<button type="submit" class="btn waves-effect waves-red" id="search-submit"><i class="material-icons right">send</i>Submit</button>
-							</div>
-							<div class="input-field col s6">
+							</form>
+						</div> <!-- end of col -->
+						<div class="input-field col s6">
+							<form id="person-form" action="">
 								<label for="person-search">Actor/Actress Name</label>
 								<input type="text" class="validate" placeholder="ex. Chris Pratt" id="person-search">
 								<br>
 								<button type="submit" class="btn waves-effect waves-red" id="person-submit"><i class="material-icons right">send</i>Submit</button>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</form> <!-- end of panel default -->		
-		</div>
+							</form>
+						</div> <!-- end of col -->
+					</div> <!-- end of card content -->
+				</div> <!-- end of row -->
+			</div> <!-- end of card -->		
+		</div> <!-- end of row -->
     
-	<!-- </div> end of main content container -->
+    	<!-- Slider -->
 		<div class="slider left" style="max-width: 800px;">
 			<ul class="slides" id="backgrounds">
 		  	</ul>
@@ -75,7 +76,7 @@
 			</div> <!-- end of col -->				
 		</div> <!-- end of row -->
 
-		<!-- Modal for actors -->
+		<!-- Modal error msg for movie input -->
 		<div id="my-modal-movie" class="modal">
 	    	<div class="modal-content">
 	      		<h4>Try again!</h4>
@@ -83,13 +84,14 @@
 	      	</div>
 	    </div>
 
-	    <!-- Modal for actors -->
+	    <!-- Modal error msg for person input -->
 	    <div id="my-modal-actor" class="modal">
 	    	<div class="modal-content">
 	      		<h4>Try Again!</h4>
 	      		<p>Sorry that's not a real actor...</p>
 	      	</div>
 	    </div>
+	</div> <!-- end of container -->
 
 	<!-- Links to our project's .js files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
