wrapped header in container, wrapped carousel and slider in rows and columns that span the page

--- a/index.html
+++ b/index.html
@@ -16,20 +16,22 @@
 	<!-- Top-Floating Nav Bar -->
 	<nav>
 		<div class="nav-wrapper deep-orange darken-4">
-			<a class="brand-logo" href="index.html"><i class="material-icons">movie</i>  Movie Buff Hub!</a>
-			<!-- collapse bars for when viewport is too small -->
-			<a href="#" data-activates="sidebar" class="button-collapse"><i class="material-icons">menu</i></a>
-			<ul class="right hide-on-med-and-down">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="history.html">History</a></li>
-				<li><a href="about.html">About Us</a></li>
-			</ul>
-			<ul class="side-nav" id="sidebar">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="history.html">History</a></li>
-				<li><a href="about.html">About Us</a></li>
-			</ul>
-		</div> <!-- end of navbar container -->
+			<div class="container">
+				<a class="brand-logo" href="index.html"><i class="material-icons">movie</i>  Movie Buff Hub!</a>
+				<!-- collapse bars for when viewport is too small -->
+				<a href="#" data-activates="sidebar" class="button-collapse"><i class="material-icons">menu</i></a>
+				<ul class="right hide-on-med-and-down">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="history.html">History</a></li>
+					<li><a href="about.html">About Us</a></li>
+				</ul>
+				<ul class="side-nav" id="sidebar">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="history.html">History</a></li>
+					<li><a href="about.html">About Us</a></li>
+				</ul>
+			</div> <!-- end of container -->
+		</div> <!-- end of nav-wrapper -->
 	</nav> <!-- end of nav -->
 
 	<!-- Main Content Container -->
@@ -61,19 +63,20 @@
 		</div> <!-- end of row -->
     
     	<!-- Slider -->
-		<div class="slider left" style="max-width: 800px;">
-			<ul class="slides" id="backgrounds">
-		  	</ul>
-		</div>
+		<div class="row">
+			<div class="col s12">
+				<div class="slider left" style="max-width: 800px;">
+					<ul class="slides" id="backgrounds"></ul>
+				</div>
+			</div>
+		</div> <!-- end of row -->
 
 		<!-- Carousel -->
 		<div class="row">
-			<div class="col s12 l9">
-				<h4>Other Users Have Recently Viewed...</h4>
-				<!-- <div id="suggestions-onindex"> -->
+			<div class="col s12">
+				<h5 class="center-align">Other Users Have Recently Viewed...</h5>
 				<div class="carousel"></div>
-				<!-- </div> -->
-			</div> <!-- end of col -->				
+			</div>
 		</div> <!-- end of row -->
 
 		<!-- Modal error msg for movie input -->
@@ -82,7 +85,7 @@
 	      		<h4>Try again!</h4>
 	      		<p>Sorry that's not a movie...</p>
 	      	</div>
-	    </div>
+	    </div> <!-- end of modal -->
 
 	    <!-- Modal error msg for person input -->
 	    <div id="my-modal-actor" class="modal">
@@ -90,7 +93,7 @@
 	      		<h4>Try Again!</h4>
 	      		<p>Sorry that's not a real actor...</p>
 	      	</div>
-	    </div>
+	    </div> <!-- end of modal -->
 	</div> <!-- end of container -->
 
 	<!-- Links to our project's .js files -->
