added method for getMainMovieCard() and appended it to an empty div called main-movie

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 	<script src="assets/javascript/database-mng.js"></script>
 	<script src="assets/javascript/methods.js"></script>
+	<script src="assets/javascript/results-methods.js"></script>
 	<script src="assets/javascript/ajax.js"></script>
 	<script src="assets/javascript/app.js"></script>
 
