--- a/search.html
+++ b/search.html
@@ -64,6 +64,7 @@
 			</div> <!-- end of card -->		
 		</div> <!-- end of row -->
     
+    	<div id="main-result"></div>
 
 
 		<!-- Modal error msg for movie input -->
@@ -89,6 +90,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 	<script src="assets/javascript/database-mng.js"></script>
 	<script src="assets/javascript/methods.js"></script>
+	<script src="assets/javascript/results-methods.js"></script>
 	<script src="assets/javascript/ajax.js"></script>
 	<script src="assets/javascript/app.js"></script>
 
