--- a/history.html
+++ b/history.html
@@ -53,6 +53,7 @@
 	<!-- Links to our project's .js files -->
 	<script src="assets/javascript/database-mng.js"></script>
 	<script src="assets/javascript/methods.js"></script>
+	<script src="assets/javascript/results-methods.js"></script>
 	<script src="assets/javascript/ajax.js"></script>
 	<script src="assets/javascript/app.js"></script>
 
