added a pulse to the nav bar when on the mobile screen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="container">
 				<a class="brand-logo" href="index.html"><i class="material-icons">movie</i>  Movie Buff Hub!</a>
 				<!-- collapse bars for when viewport is too small -->
-				<a href="#" data-activates="sidebar" class="button-collapse"><i class="material-icons">menu</i></a>
+				<a href="#" data-activates="sidebar" class="btn btn-floating pulse" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="search.html">Search</a></li>
