--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<li><a href="history.html">History</a></li>
 					<li><a href="about.html">About Us</a></li>
 				</ul>
-				<ul class="side-nav" id="sidebar">
+				<ul class="side-nav" id="sidebar">	
 					<li><a href="index.html">Home</a></li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="about.html">About Us</a></li>
@@ -64,7 +64,7 @@
     
     	<!-- Slider -->
     	<div class="row">
-    		<h4>Popular Movies Right Now...</h4>
+    		<h4 class="center">Popular Movies Right Now...</h4>
     		<div class="col offset-l2 s12 l8">
 				<div class="slider">
 					<ul class="slides" id="backgrounds">
@@ -74,7 +74,7 @@
 		</div>
 		<!-- Carousel -->
 		<div class="row">
-			<h4>Other Users Have Recently Viewed...</h4>
+			<h4 class="center">Other Users Have Recently Viewed...</h4>
 			<div class="col offset-l1 s12 l10">				
 				<!-- <div id="suggestions-onindex"> -->
 				<div class="carousel"></div>
