--- a/history.html
+++ b/history.html
@@ -44,14 +44,19 @@
 		</div>		
 	</div> <!-- end of main content container -->
 
-	<!-- Links to our project's .js files -->
+	<!-- Links to external .js files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-	<script src="assets/javascript/database-mng.js"></script>
-	<script src="assets/javascript/methods.js"></script>
+	<!-- Link to client-side methods first, as the rest will make use of them -->
+	<script src="assets/javascript/client-methods.js"></script>
 	<script src="assets/javascript/results-methods.js"></script>
+	<!-- Link to database event listeners and server-side methods -->
+	<script src="assets/javascript/database-mng.js"></script>
+	<script src="assets/javascript/server-methods.js"></script>
+	<!-- Link to ajax methods -->
 	<script src="assets/javascript/ajax.js"></script>
+	<!-- Link to document event listeners -->
 	<script src="assets/javascript/app.js"></script>
 
 </body>
