tried adding window.location.href function to switch to new page but wasn't working

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<div class="card-content white-text">
 						<span class="card-title">Search: </span>
 						<div class="input-field col s6">
-							<form id="movie-form" action="">
+							<form id="movie-form" action="" target="search.html">
 								<label for="main-search">Movie Title</label>
 								<input type="text" class="validate" placeholder="ex. The Green Mile" id="main-search">
 								<br>
