added functionality for linking to search.html only if user is not currently on search.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
     	<!-- Slider -->
     	<div class="row">
-    		<h4>Popular Movies Right Now...</h4>
+    		<h4 class="">Popular Movies Right Now...</h4>
     		<div class="col offset-l2 s12 l8">
 				<div class="slider">
 					<ul class="slides" id="backgrounds">
