--- a/history.html
+++ b/history.html
@@ -38,11 +38,11 @@
 
 
 	<!-- Main Content Container -->
-	<div class="container">	
+	<!-- <div class="container">	 -->
 		<div class="row">
 			<div id="search-history"></div>
 		</div>		
-	</div> <!-- end of main content container -->
+	<!-- </div> end of main content container -->
 
 	<!-- Links to external .js files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
