--- a/history.html
+++ b/history.html
@@ -24,13 +24,13 @@
 				<ul class="right hide-on-med-and-down">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="search.html">Search</a></li>
-					<li><a href="history.html">History</a></li>
+					<li class="active"><a href="history.html">History</a></li>
 					<li><a href="about.html">About Us</a></li>
 				</ul>
 				<ul class="side-nav" id="sidebar">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="search.html">Search</a></li>
-					<li><a href="history.html">History</a></li>
+					<li class="active"><a href="history.html">History</a></li>
 					<li><a href="about.html">About Us</a></li>
 				</ul>
 			</div> <!-- end of container -->
