--- a/search.html
+++ b/search.html
@@ -22,13 +22,13 @@
 				<a href="#" data-activates="sidebar" class="button-collapse"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="search.html">Search</a></li>
+					<li class="active"><a href="search.html">Search</a></li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="about.html">About Us</a></li>
 				</ul>
 				<ul class="side-nav" id="sidebar">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="search.html">Search</a></li>
+					<li class="active"><a href="search.html">Search</a></li>
 					<li><a href="history.html">History</a></li>
 					<li><a href="about.html">About Us</a></li>
 				</ul>
