rearranged and realigned slider and carousel titles in index

--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
     
     	<!-- Slider -->
     	<div class="row">
-    		<h4 class="">Popular Movies Right Now...</h4>
     		<div class="col offset-l2 s12 l8">
 				<div class="slider">
 					<ul class="slides" id="backgrounds">
 				  	</ul>
 				</div>
+    			<h4 class="center-align"><i>Popular Movies Right Now</i></h4>
 			</div>
 		</div>
 		<!-- Carousel -->
 		<div class="row">
-			<h4>Other Users Have Recently Viewed...</h4>
 			<div class="col offset-l1 s12 l10">				
 				<!-- <div id="suggestions-onindex"> -->
 				<div class="carousel"></div>
+				<h4 class="center-align"><i>Recent Searches by Other Users</i></h4>
 			</div>
 		</div> <!-- end of row -->
 
