added footer code

--- a/index.html
+++ b/index.html
@@ -98,6 +98,33 @@
 	    </div> <!-- end of modal -->
 	</div> <!-- end of container -->
 
+    <footer class="page-footer deep-orange darken-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Credits</h5>
+            <p id="tmdb-credit">Powered by <a href="https://www.themoviedb.org/"><img id="TMDb-logo" src="https://www.themoviedb.org/assets/static_cache/c9dbe2292fb5eea61788571fbd96fa67/images/v4/logos/208x226-stacked-blue.png" alt="TMDb logo"></a></p>
+            <p class="grey-text text-lighten-4">"This product uses the TMDb API but is not endorsed or certified by TMDb." </p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="container">
+        © 2017 Copyright John, Tyler and Andrew
+        <a class="grey-text text-lighten-4 right" href="about.html">More Links</a>
+        </div>
+      </div>
+    </footer>
+
 	<!-- Links to external .js files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/4.1.1/firebase.js"></script>
