did git rm about.html, removed. can put back in later when we get content ideas

--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="search.html">Search</a></li>
 					<li><a href="history.html">History</a></li>
-					<li><a href="about.html">About Us</a></li>
 				</ul>
 				<ul class="side-nav" id="sidebar">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="search.html">Search</a></li>
 					<li><a href="history.html">History</a></li>
-					<li><a href="about.html">About Us</a></li>
 				</ul>
 			</div> <!-- end of container -->
 		</div> <!-- end of nav-wrapper -->
@@ -120,7 +118,7 @@
       <div class="footer-copyright">
         <div class="container">
         © 2017 Copyright John, Tyler and Andrew
-        <a class="grey-text text-lighten-4 right" href="about.html">More Links</a>
+        <a class="grey-text text-lighten-4 right" href="#">More Links</a>
         </div>
       </div>
     </footer>
