--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 	<!-- Link to ajax methods -->
 	<script src="assets/javascript/ajax.js"></script>
 	<!-- Link to document event listeners -->
-	<script src="assets/javascript/app.js"></script>
+	<script src="assets/javascript/app.js"></script>	
+	<script src="assets/javascript/index.js"></script>
 
 </body>
 </html>
