created search.js and history.js so that they are only linked to on search.html and history.html with their unique functions

--- a/history.html
+++ b/history.html
@@ -56,7 +56,8 @@
 	<!-- Link to ajax methods -->
 	<script src="assets/javascript/ajax.js"></script>
 	<!-- Link to document event listeners -->
-	<script src="assets/javascript/app.js"></script>
+	<script src="assets/javascript/app.js"></script>	
+	<script src="assets/javascript/history.js"></script>
 
 </body>
 </html>
