--- a/search.html
+++ b/search.html
@@ -100,7 +100,8 @@
 	<!-- Link to ajax methods -->
 	<script src="assets/javascript/ajax.js"></script>
 	<!-- Link to document event listeners -->
-	<script src="assets/javascript/app.js"></script>
+	<script src="assets/javascript/app.js"></script>	
+	<script src="assets/javascript/search.js"></script>
 
 </body>
 </html>
