added footer content code to make it sticky

--- a/history.html
+++ b/history.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 	<!-- Top-Floating Nav Bar -->
+	<header>
 	<nav>
 		<div class="nav-wrapper deep-orange darken-4">
 			<div class="container">
@@ -34,14 +35,44 @@
 			</div> <!-- end of container -->
 		</div> <!-- end of nav-wrapper -->
 	</nav> <!-- end of nav -->
-
-
+	</header>
+	<main>
 	<!-- Main Content Container -->
 	<!-- <div class="container">	 -->
+
 		<div class="row">
 			<div id="search-history"></div>
 		</div>		
+	</main>
 	<!-- </div> end of main content container -->
+
+	    <footer class="page-footer deep-orange darken-4">
+	      <div class="container">
+	        <div class="row">
+	          <div class="col l6 s12">
+	            <h5 class="white-text">Credits</h5>
+	            <a id="tmdb-credit" href="https://www.themoviedb.org/"><p>Powered by <img id="TMDb-logo" src="https://www.themoviedb.org/assets/static_cache/c9dbe2292fb5eea61788571fbd96fa67/images/v4/logos/208x226-stacked-blue.png" alt="TMDb logo"></a></p>
+	            <p class="grey-text text-lighten-4">"This product uses the TMDb API but is not endorsed or certified by TMDb." </p>
+	          </div>
+	          <div class="col l4 offset-l2 s12">
+	            <h5 class="white-text">Connect</h5>
+	            <ul>
+	            <iframe src="https://ghbtns.com/github-btn.html?user=PeterBilt42&repo=Movie-Buff-Hub-Project&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+	              <li><a class="white-text" href="https://github.com/jpsilkjr86/" target="_blank">
+	              	<span>John (jpsilkjr86)</span></a></li>
+	              <li><a class="white-text" href="https://github.com/mong04/" target="_blank">  
+	              	<span>Andrew (mong04)</span></a></li>
+	              <li><a class="white-text" href="https://github.com/PeterBilt42/" target="_blank">
+	              	<span>Tyler (PeterBilt42)</span></a></li>
+	            </ul>
+	          </div>
+	        </div>
+	      </div>
+	      <div class="footer-copyright">
+	        <div class="container">
+	        © 2017 Copyright John, Tyler and Andrew
+	      </div>
+	    </footer>
 
 	<!-- Links to external .js files -->
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
