--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Movie Buff Hub - Home</title>
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="https://use.fontawesome.com/163293e3cd.js"></script>
 	<!-- Compiled and minified CSS for Materialize -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 	<!-- Link to Custom Style Sheets-->
@@ -14,6 +15,7 @@
 </head>
 <body>
 	<!-- Top-Floating Nav Bar -->
+<header>
 	<nav>
 		<div class="nav-wrapper deep-orange darken-4">
 			<div class="container">
@@ -33,8 +35,9 @@
 			</div> <!-- end of container -->
 		</div> <!-- end of nav-wrapper -->
 	</nav> <!-- end of nav -->
-
+</header>	
 	<!-- Main Content Container -->
+<main>
 	<div class="container">
 		<div class="row">
 			<div class="card blue-grey darken-4">
@@ -95,22 +98,25 @@
 	      	</div>
 	    </div> <!-- end of modal -->
 	</div> <!-- end of container -->
-
+</main>
     <footer class="page-footer deep-orange darken-4">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">Credits</h5>
-            <p id="tmdb-credit">Powered by <a href="https://www.themoviedb.org/"><img id="TMDb-logo" src="https://www.themoviedb.org/assets/static_cache/c9dbe2292fb5eea61788571fbd96fa67/images/v4/logos/208x226-stacked-blue.png" alt="TMDb logo"></a></p>
+            <a id="tmdb-credit" href="https://www.themoviedb.org/"><p>Powered by <img id="TMDb-logo" src="https://www.themoviedb.org/assets/static_cache/c9dbe2292fb5eea61788571fbd96fa67/images/v4/logos/208x226-stacked-blue.png" alt="TMDb logo"></a></p>
             <p class="grey-text text-lighten-4">"This product uses the TMDb API but is not endorsed or certified by TMDb." </p>
           </div>
           <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
+            <h5 class="white-text">Connect</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <iframe src="https://ghbtns.com/github-btn.html?user=PeterBilt42&repo=Movie-Buff-Hub-Project&type=watch&count=true&size=large&v=2" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+              <li><a class="white-text" href="https://github.com/jpsilkjr86/" target="_blank">
+              	<span>John (jpsilkjr86)</span></a></li>
+              <li><a class="white-text" href="https://github.com/mong04/" target="_blank">  
+              	<span>Andrew (mong04)</span></a></li>
+              <li><a class="white-text" href="https://github.com/PeterBilt42/" target="_blank">
+              	<span>Tyler (PeterBilt42)</span></a></li>
             </ul>
           </div>
         </div>
@@ -118,8 +124,6 @@
       <div class="footer-copyright">
         <div class="container">
         © 2017 Copyright John, Tyler and Andrew
-        <a class="grey-text text-lighten-4 right" href="#">More Links</a>
-        </div>
       </div>
     </footer>
 
